modified to work locally

--- a/server_config.json
+++ b/server_config.json
@@ -5,7 +5,7 @@
         "args": [
           "mcp-server-sqlite",
           "--db-path",
-          "/Users/christopherhay/chris-source/mcp-play/hello-sqlite/test.db"
+          "test.db"
         ]
       }
     }
