I've updated the code to use the model selected by the user. I've noticed that when the provider is ollama, the model used is hardcoded as qwen2.5-coder.

--- a/server_config.json
+++ b/server_config.json
@@ -5,7 +5,7 @@
         "args": [
           "mcp-server-sqlite",
           "--db-path",
-          "test.db"
+          "C:\\Users\\adi\\Desktop\\ClaudeDbTest\\test.db"
         ]
       }
     }
