--- a/server_config.json
+++ b/server_config.json
@@ -5,7 +5,7 @@
         "args": [
           "mcp-server-sqlite",
           "--db-path",
-          "C:\\Users\\adi\\Desktop\\ClaudeDbTest\\test.db"
+          "test.db"
         ]
       }
     }
