--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,16 @@
+[build-system]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
 [project]
 name = "mcp-cli"
 version = "0.1.0"
-description = "a cli for the Model Context Provider"
-readme = "README.md"
+description = "A cli for the Model Context Provider"
 requires-python = ">=3.12"
+readme = "README.md"
+authors = [{ name = "Chris Hay", email = "chrishayuk@googlemail.com" }]
+keywords = ['llm', 'openai', 'claude', 'mcp', 'cli']
+license = { text = "MIT" }
 dependencies = [
     "anyio>=4.6.2.post1",
     "asyncio>=3.4.3",
@@ -12,4 +19,14 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
     "rich>=13.9.4",
+]
+
+[tool.pdm.build.wheel-data]
+# Install all files under scripts/ to the $prefix/bin directory.
+scripts = ["scripts/*"]
+
+[tool.ruff.lint]
+unfixable = [
+    "I",
+    "F401", # Don't touch unused imports
 ]
