Add logging, minor changes to be able to use it as submodule

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "requests>=2.32.3",
     "rich>=13.9.4",
     "anthropic>=0.19.2",
+    "gitpython>=3.1.43",
+    "mcp>=1.1.2",
 ]
 [project.scripts]
 mcp-cli = "mcpcli.__main__:cli_main"
