--- a/server_config.json
+++ b/server_config.json
@@ -1,8 +1,8 @@
 {
   "mcpServers": {
-    "sqlite": {
-      "command": "uvx",
-      "args": ["mcp-server-sqlite", "--db-path", "test.db"]
+    "git": {
+      "command": "python",
+      "args": ["/home/dev/projects/repsonal_tg_assistant/servers/src/git/src/mcp_server_git/server.py", "--repository", "/home/dev/projects/repsonal_tg_assistant/"]
     }
   }
 }
